[gd_scene load_steps=9 format=3 uid="uid://d1suvhj0a4sfx"]

[ext_resource type="Script" path="res://shark.gd" id="1_lwomg"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6t7na"]
radius = 0.72
height = 4.877

[sub_resource type="SphereMesh" id="SphereMesh_ts3a3"]

[sub_resource type="SphereMesh" id="SphereMesh_kqa62"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s2x71"]
radius = 0.805
height = 5.77

[sub_resource type="SphereMesh" id="SphereMesh_1dyn7"]
radius = 1.825
height = 0.265
radial_segments = 5

[sub_resource type="PrismMesh" id="PrismMesh_m4mt8"]
size = Vector3(1.025, 1.125, 0.12)

[sub_resource type="SphereShape3D" id="SphereShape3D_n7hrd"]
radius = 0.685

[node name="shark" type="RigidBody3D"]
gravity_scale = 0.0
script = ExtResource("1_lwomg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.258753)
mesh = SubResource("CapsuleMesh_6t7na")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.44602, 0.451904, -2.53743)
mesh = SubResource("SphereMesh_ts3a3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.381024, 0.451904, -2.53743)
mesh = SubResource("SphereMesh_kqa62")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_s2x71")

[node name="tail_piv" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.81078)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="tail_piv"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.724829)
mesh = SubResource("SphereMesh_1dyn7")
skeleton = NodePath("../..")

[node name="jaw_piv" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.633798, -1.49288)

[node name="MeshInstance3D" type="MeshInstance3D" parent="jaw_piv"]
transform = Transform3D(1, 0, 0, 0, 0.0169987, 0.999856, 0, -0.999856, 0.0169987, 0, -0.0135632, -0.702173)
mesh = SubResource("PrismMesh_m4mt8")

[node name="bite_zone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bite_zone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000177503, -2.67598)
shape = SubResource("SphereShape3D_n7hrd")

[connection signal="body_entered" from="bite_zone" to="." method="_on_bite_zone_body_entered"]
